Fix conf and go comments

--- a/conf/development/application.toml
+++ b/conf/development/application.toml
@@ -12,4 +12,4 @@ realm =                "dev"
 auth_url =             "https://hello-there.auth0.com"
 use_deprecated_login = false
 max_retries =          3
-on_success_wait =         10 //minutes
+on_success_wait =         10 #minutes
